Test commit for docker build

--- a/app/views/layouts/_head_tag_content.html.erb
+++ b/app/views/layouts/_head_tag_content.html.erb
@@ -6,6 +6,7 @@ signed in %>
 <% if Hyrax.config.realtime_notifications? && signed_in? %>
     <%= tag :meta, name: 'current-user', data: { user_key: current_user.user_key } %>
 <% end %>
+<!-- some change made in hyrax!!! -->
 <!-- added for use on small devices like phones -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="resourcesync" href="<%= hyrax.capability_list_url %>" />
